src/objects/ExecutionPlanActivity__c.object
<CustomObject>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <formula>IF(ExecutionPlan__r.Approved__c=TRUE,&apos;Approved&apos;, &apos;Not Approved&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>AF - Agilis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Ampere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Capital Equipment Generic Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Claris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Coolpoint Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFCRM - Mediguide Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFCRM - Mediguide Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFCRM - Mediguide Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Diagnostics Generic Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Flexible Tip Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Introducers Generic Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Irrigated Ablation Generic Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Precision 2.0 Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Segmentation Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Tacticath Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 10/10/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 8F ICD Lead Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - AF MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Heart Failure Market Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HF Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HV MRI Ready - AU Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HV MRI Ready-CE Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Merlin @ Home Priv Reimburse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MORE CRT MPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MPP 12 Month Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MRI Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - NZ launch of Assurity MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - RF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vascular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExecutionPlan__c</fullName>
        <label>Execution Plan</label>
        <referenceTo>ExecutionPlan__c</referenceTo>
        <relationshipLabel>Execution Plan Activities</relationshipLabel>
        <relationshipName>Bespoke_Plan_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining__c</fullName>
        <formula>Quantity__c - Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journal Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Execution Plan Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EPA - {000000000}</displayFormat>
        <label>Execution Plan Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Execution Plan Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Approved_EP</fullName>
        <active>true</active>
        <description>You can not change fields once the Execution Plan is Approved</description>
        <errorConditionFormula>(  Approved__c  =&apos;Approved&apos;) 
&amp;&amp;
(OR( ISCHANGED( Description__c ) , ISCHANGED( Quantity__c ) , ISCHANGED( Type__c ) ))</errorConditionFormula>
        <errorMessage>The Execution Plan is Approved and the Objectives can not be changed.
Please see the Plan&apos;s Territory Manager if a change is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_add_EP_events_if_its_not_approved</fullName>
        <active>true</active>
        <description>Users cannot add Execution Plan objectives events/task if Execution Plan has not been approved</description>
        <errorConditionFormula>AND(
ExecutionPlan__r.Approved__c &lt;&gt; TRUE,
Scheduled__c &gt;0
)</errorConditionFormula>
        <errorMessage>Events/Tasks cannot be created as Execution Plan has not been approved</errorMessage>
    </validationRules>
</CustomObject>